# dilib-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
dilib/: Cargo.toml  LICENSE  README.md  build.rs
dilib-derive/: Cargo.toml  README.md
dilib-derive/src/: constructor.rs  dependency.rs  error.rs  keys.rs  lib.rs  strings.rs  target.rs  utils.rs
dilib-derive/src/helpers/: mod.rs
dilib-experimental/: Cargo.toml
dilib-experimental/src/: error.rs  lib.rs  resolve_call.rs  typing.rs
dilib-macros/: Cargo.toml  README.md
dilib-macros/src/: keys.rs  lib.rs  provide_attr.rs  resolve_fn_arg.rs  scope.rs  target.rs  utils.rs
dilib/benches/: bench_main.rs
dilib/benches/benchmarks/: get_named_comparison.rs  mod.rs  scoped.rs  singleton.rs  singleton_lazy.rs
dilib/src/: container.rs  error.rs  global.rs  injectable.rs  key.rs  lib.rs  lib_macros.rs  macros.rs  provider.rs  resolved.rs  scoped.rs  shared.rs  typing.rs  z_error.rs
samples/derive/: Cargo.toml
samples/derive/src/: main.rs
samples/global/: Cargo.toml
samples/global/src/: main.rs
samples/hello_world/: Cargo.toml
samples/hello_world/src/: main.rs
samples/local/: Cargo.toml
samples/local/src/: main.rs
samples/provide/: Cargo.toml
samples/provide/src/: main.rs
samples/web_api/: Cargo.toml
samples/web_api/src/: main.rs
samples/web_api/src/api/: log.rs  mod.rs  todo_task.rs
samples/web_api/src/entities/: audit_log.rs  log.rs  mod.rs  todo_task.rs
samples/web_api/src/middlewares/: mod.rs
samples/web_api/src/repositories/: in_memory.rs  memory.rs  mod.rs  storage.rs
samples/web_api/src/repository/: in_memory.rs  mod.rs
samples/web_api/src/services/: audit_log_service.rs  console_logger.rs  logger.rs  logger_service.rs  mod.rs
samples/web_api/src/utils/: mod.rs  typing.rs
src/: container.rs  provider.rs  scoped.rs
test_suite/: Cargo.toml  build.rs
test_suite/tests/: compiletest.rs  expandtest.rs
test_suite/tests/expand/: default_ty_param.expanded.rs  default_ty_param.rs  generics.expanded.rs  generics.rs  generics_constraint.expanded.rs  generics_constraint.rs  generics_where.expanded.rs  generics_where.rs  inject_constructor.expanded.rs  inject_constructor.rs  inject_default.expanded.rs  inject_default.rs  inject_from_path_scoped.expanded.rs  inject_from_path_scoped.rs  inject_from_path_singleton_1.expanded.rs  inject_from_path_singleton_1.rs  inject_from_path_singleton_2.expanded.rs  inject_from_path_singleton_2.rs  inject_name.expanded.rs  inject_name.rs  inject_scope.expanded.rs  inject_scope.rs  inject_scoped_trait.expanded.rs  inject_scoped_trait.rs  inject_singleton_trait.expanded.rs  inject_singleton_trait.rs  lifetimes.expanded.rs  lifetimes.rs  named_struct.expanded.rs  named_struct.rs  singleton.expanded.rs  singleton.rs  tuple_struct.expanded.rs  tuple_struct.rs  unit_struct.expanded.rs  unit_struct.rs  unit_struct_brackets.expanded.rs  unit_struct_brackets.rs
test_suite/tests/macros/expand/: provide_inject_named_scoped.expanded.rs  provide_inject_named_scoped.rs  provide_inject_named_singleton.expanded.rs  provide_inject_named_singleton.rs  provide_inject_scoped.expanded.rs  provide_inject_scoped.rs  provide_inject_scoped_trait.expanded.rs  provide_inject_scoped_trait.rs  provide_inject_singleton.expanded.rs  provide_inject_singleton.rs  provide_inject_singleton_trait.expanded.rs  provide_inject_singleton_trait.rs  provide_named_scoped.expanded.rs  provide_named_scoped.rs  provide_named_singleton.expanded.rs  provide_named_singleton.rs  provide_scope_scoped.expanded.rs  provide_scope_scoped.rs  provide_scoped.expanded.rs  provide_scoped.rs  provide_scoped_trait.expanded.rs  provide_scoped_trait.rs  provide_singleton.expanded.rs  provide_singleton.rs  provide_singleton_trait.expanded.rs  provide_singleton_trait.rs  resolve_named_scope.expanded.rs  resolve_named_scope.rs  resolve_named_singleton.expanded.rs  resolve_named_singleton.rs  resolve_scoped.expanded.rs  resolve_scoped.rs  resolve_singleton.expanded.rs  resolve_singleton.rs
test_suite/tests/macros/ui/: derive_provide_order.rs  derive_provide_order.stderr  invalid_inject_name_value.rs  invalid_inject_name_value.stderr  invalid_name.rs  invalid_name.stderr  invalid_name_value.rs  invalid_name_value.stderr  invalid_scope.rs  invalid_scope.stderr  provide_bind_invalid_tokens.rs  provide_bind_invalid_tokens.stderr  provide_bind_nonexisting_type.rs  provide_bind_nonexisting_type.stderr  provide_struct_no_inject.rs  provide_struct_no_inject.stderr  unit_return_type.rs  unit_return_type.stderr
test_suite/tests/ui/inject_constructor/: invalid_types.rs  invalid_types.stderr  missing_param.rs  missing_param.stderr  unknown_constructor.rs  unknown_constructor.stderr  unknown_fields.rs  unknown_fields.stderr
test_suite/tests/ui/inject_scope/: unknown_scope.rs  unknown_scope.stderr
