[package]
name = "dilib-derive"
description = "Derive proc_macros for the dilib crate"
version = "0.2.0-alpha"
authors = ["Freddy L."]
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/Neo-Ciber94/dilib-rs/"
homepage = "https://crates.io/crates/dilib/"
documentation = "https://docs.rs/dilib/"
rust-version = "1.59.0"

[lib]
proc_macro = true

[dependencies]
proc-macro2 = "1.0.27"
quote = "1.0.9"
syn = { version = "1.0.73" , features=["parsing"]}
mattro = "0.1.2"

[dev-dependencies]
dilib = { path = "../dilib", version="0.2.0-alpha" }
