[package]
name = "dilib-macros"
description = "Procedural macros for the dilib crate"
version = "0.2.0-alpha"
license-file = "LICENSE"
edition = "2021"
rust-version = "1.59.0"

[lib]
proc_macro = true

[dependencies]
proc-macro2 = "1.0.37"
syn = { version = "1.0.91", features = ["extra-traits", "parsing", "derive"] }
quote = "1.0.17"
mattro = "0.1.2"
const_format = "0.2.22"

[dev-dependencies]
dilib = { path = "../dilib", features=["full", "unstable_provide"] }
ctor = "0.1.3"
