[package]
name = "test_suite"
version = "0.0.0"
authors = ["Freddy L."]
edition = "2018"
publish = false
build = "build.rs"
rust-version = "1.59.0"

[dependencies]
dilib = { path = "../dilib", features=["derive", "unstable_provide"] }

[dev-dependencies]
macrotest = "=1.0.9"
trybuild = { version = "=1.0.66", features = ["diff"] }
