[package]
name = "web_api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
dilib = { path = "../../dilib", features=["full", "unstable_provide"] }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
env_logger = "0.9.0"
log = "0.4.16"
async-trait = "0.1.53"
chrono = { version = "0.4.19", features = ["serde"] }
lazy_static = "1.4.0"
futures-util = "0.3.21"